--- a/views/index.html
+++ b/views/index.html
@@ -44,9 +44,9 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="day-buttons">
-            <button class="btn btn-circle day-btn current-day">1</button>
-            <button class="btn btn-circle day-btn">2</button>
-            <button class="btn btn-circle day-btn">3</button>
+            <button class="btn btn-circle day-btn not-add-btn current-day">1</button>
+            <button class="btn btn-circle day-btn not-add-btn">2</button>
+            <button class="btn btn-circle day-btn not-add-btn">3</button>
             <button id="add-btn" class="btn btn-circle day-btn" id="day-add">+</button>
           </div>
         </div>
